Register Doctor UI

--- a/app/src/main/res/layout/activity_doctor_registration.xml
+++ b/app/src/main/res/layout/activity_doctor_registration.xml
@@ -212,8 +212,8 @@
 
             <Button
                 android:id="@+id/buttonRegister"
-                android:layout_width="205dp"
-                android:layout_height="58dp"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/navy"
                 android:fontFamily="monospace"
@@ -232,9 +232,9 @@
                 android:layout_marginEnd="32dp"
                 android:ems="10"
                 android:inputType="number"
+                android:textColor="#1A446B"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="#1A446B" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <EditText
                 android:id="@+id/editTextTextUserName"
@@ -253,7 +253,7 @@
                 android:layout_height="600dp"
                 android:background="#CB3E89C1"
                 android:elevation="2dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -269,7 +269,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="330dp"
                         android:background="@drawable/textview_background"
-                        android:fontFamily="monospace"
                         android:padding="10dp"
                         android:paddingLeft="5dp"
                         android:paddingTop="20dp"
@@ -307,7 +306,6 @@
                         android:textStyle="bold"
                         android:visibility="visible"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.558"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textViewVerification" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -319,12 +317,21 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="60dp"
+                android:elevation="4dp"
                 android:indeterminateDrawable="@drawable/progress_icon"
                 android:visibility="gone"
-                android:elevation="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+            <View
+                android:id="@+id/view6"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:background="#1A446B"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
