--- a/app/src/main/res/layout/activity_patient_main_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_main_page_new.xml
@@ -173,7 +173,7 @@
         app:layout_constraintStart_toStartOf="@+id/buttonPatientConsultDocNew" />
 
     <TextView
-        android:id="@+id/textView77"
+        android:id="@+id/textViewPatientMainDate_NEW"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
