--- a/app/src/main/res/layout/activity_patient_registration.xml
+++ b/app/src/main/res/layout/activity_patient_registration.xml
@@ -201,7 +201,7 @@
         android:layout_height="600dp"
         android:background="#CB3E89C1"
         android:elevation="4dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
