--- a/app/src/main/res/layout/activity_patient_registration.xml
+++ b/app/src/main/res/layout/activity_patient_registration.xml
@@ -12,9 +12,9 @@
     <ImageView
         android:id="@+id/imageView20"
         android:layout_width="150dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/file_patient"
+        android:layout_height="150sp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/ic_baseline_person_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -147,22 +147,11 @@
     <View
         android:id="@+id/view14"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="20dp"
         android:background="#1A446B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextTextPatientAge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textColor="#1A446B"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView69"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView69"
@@ -170,7 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="@string/age"
+        android:text="@string/date_of_birth"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView46" />
 
@@ -264,4 +253,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
+
+    <TextView
+        android:id="@+id/textViewPatientAgeRegistration_NEW"
+        android:layout_width="200dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="32dp"
+        android:drawableRight="@drawable/ic_baseline_date_range_24"
+        android:paddingLeft="7dp"
+        android:paddingTop="7dp"
+        android:textColor="#1A446B"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView69"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
