--- a/app/src/main/res/layout/activity_patient_upload_pic.xml
+++ b/app/src/main/res/layout/activity_patient_upload_pic.xml
@@ -75,4 +75,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view59" />
+
+    <ProgressBar
+        android:id="@+id/progressBarPatientUploadPic"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="32dp"
+        android:indeterminateDrawable="@drawable/progress_icon"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPatientChoosePic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
