--- a/app/src/main/res/layout/activity_patient_main_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_main_page_new.xml
@@ -26,11 +26,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <View
+        android:id="@+id/view60"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/white_background_circle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView71"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:elevation="5dp"
         android:text="@string/upcoming_appointment"
         android:textAlignment="center"
@@ -122,17 +132,17 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageViewPatientProfileNew"
+        app:layout_constraintStart_toEndOf="@+id/view60"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewPatientProfileNew"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view60"
+        app:layout_constraintEnd_toEndOf="@+id/view60"
+        app:layout_constraintStart_toStartOf="@+id/view60"
+        app:layout_constraintTop_toTopOf="@+id/view60"
         app:srcCompat="@drawable/personwhite" />
 
     <TextView
@@ -145,7 +155,7 @@
         android:textAlignment="viewStart"
         android:textColor="#808080"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/imageViewPatientProfileNew"
+        app:layout_constraintStart_toEndOf="@+id/view60"
         app:layout_constraintTop_toBottomOf="@+id/textViewPatientMainPageWelcome" />
 
     <ImageView
@@ -235,13 +245,13 @@
 
     <ImageView
         android:id="@+id/imageView38"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/ic_baseline_menu_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_settings_24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view40"
@@ -270,14 +280,14 @@
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
 
+        android:layout_marginTop="8dp"
         android:hint="@string/description"
         android:textColor="#1A446B"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView32"
-        app:layout_constraintTop_toBottomOf="@+id/textView71" />
+        app:layout_constraintTop_toTopOf="@+id/view40" />
 
     <TextView
         android:id="@+id/textViewPatientDateset"
@@ -312,7 +322,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
 
-        android:hint="@string/age"
+        android:hint="@string/patient_age"
         android:textColor="#1A446B"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView32"
