Patient Main Page UI

--- a/app/src/main/res/drawable/white_background_curved_tops.xml
+++ b/app/src/main/res/drawable/white_background_curved_tops.xml
@@ -3,8 +3,8 @@
     <corners android:topRightRadius="20dp"
         android:topLeftRadius="20dp"/>
 
-    <gradient android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF"
+    <gradient android:startColor="#E3F2FD"
+        android:endColor="#E3F2FD"
         android:angle="225"/>
 
 
