--- a/app/src/main/res/layout/activity_patient_main_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_main_page_new.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1A446B"
+    android:background="@drawable/blue_gradient"
     tools:context=".Patient_Main_Page_NEW">
 
     <View
         android:id="@+id/view39"
         android:layout_width="wrap_content"
-        android:layout_height="540dp"
+        android:layout_height="530dp"
         android:background="@drawable/white_background_curved_tops"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:id="@+id/textView71"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:elevation="5dp"
         android:text="@string/upcoming_appointment"
         android:textAlignment="center"
@@ -53,23 +53,23 @@
 
     <Button
         android:id="@+id/button_Book_Appointments_New"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_white_and_blue_border_background"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_background_gradient"
         android:contentDescription="@string/empty"
         android:textSize="2sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view39"
         app:layout_constraintTop_toBottomOf="@+id/view40" />
 
     <Button
         android:id="@+id/buttonPatientConsultDocNew"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/button_white_and_blue_border_background"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="18dp"
+        android:background="@drawable/button_background_gradient"
         android:text="@string/empty"
         android:textSize="2sp"
         app:layout_constraintEnd_toEndOf="@+id/view39"
@@ -77,26 +77,26 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/button_white_and_blue_border_background"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_background_gradient"
         android:text="@string/empty"
         android:textSize="2sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/view39"
         app:layout_constraintTop_toBottomOf="@+id/button_Book_Appointments_New" />
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/button_white_and_blue_border_background"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="18dp"
+        android:background="@drawable/button_background_gradient"
         android:text="@string/empty"
         android:textSize="2sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view39"
         app:layout_constraintTop_toBottomOf="@+id/buttonPatientConsultDocNew" />
 
     <ImageView
@@ -114,10 +114,10 @@
         android:id="@+id/textView73"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:elevation="2dp"
         android:text="@string/appointment"
-        android:textColor="#1A446B"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/button_Book_Appointments_New"
         app:layout_constraintStart_toStartOf="@+id/button_Book_Appointments_New"
@@ -166,7 +166,6 @@
         android:background="@drawable/ic_baseline_message_24"
         android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="@+id/buttonPatientConsultDocNew"
-        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="@+id/buttonPatientConsultDocNew"
         app:layout_constraintTop_toTopOf="@+id/buttonPatientConsultDocNew" />
 
@@ -176,7 +175,7 @@
         android:layout_height="wrap_content"
         android:elevation="2dp"
         android:text="@string/consultation"
-        android:textColor="#1A446B"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView73"
         app:layout_constraintEnd_toEndOf="@+id/buttonPatientConsultDocNew"
@@ -208,10 +207,10 @@
         android:id="@+id/textView78"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:elevation="2dp"
         android:text="@string/reports"
-        android:textColor="#1A446B"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/button8"
         app:layout_constraintStart_toStartOf="@+id/button8"
@@ -233,10 +232,10 @@
         android:id="@+id/textView79"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:elevation="2dp"
         android:text="@string/history"
-        android:textColor="#1A446B"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/button10"
         app:layout_constraintHorizontal_bias="0.512"
@@ -255,18 +254,18 @@
 
     <View
         android:id="@+id/view40"
-        android:layout_width="345dp"
+        android:layout_width="324dp"
         android:layout_height="150dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/button_white_and_blue_border_background"
 
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view39"
+        app:layout_constraintStart_toStartOf="@+id/view39"
         app:layout_constraintTop_toTopOf="@+id/view39" />
 
     <ImageView
         android:id="@+id/imageView32"
-        android:layout_width="160dp"
+        android:layout_width="135dp"
         android:layout_height="135dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/doc_snipe"
